--- a/index.html
+++ b/index.html
@@ -274,6 +274,12 @@
                     </div>
 
                     <div class="form-group">
+                        <label for="phone">Your Phone Number</label>
+                        <input type="tel" id="phone" name="phone" placeholder="+1 (555) 123-4567" required>
+                        <span class="input-hint">We'll contact you to discuss your campaign</span>
+                    </div>
+
+                    <div class="form-group">
                         <label for="email">Your Email</label>
                         <input type="email" id="email" name="email" placeholder="your@email.com" required>
                     </div>
